turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:7: error: ';' expected but ')' found.
       setCouleurBrosse(colors(x+1)%colors.length));baisseBrosse();leveBrosse()
                                                  ^